<resources>
    <string name="app_name">LocalSewa</string>
    <!--<string name="localsewa">LocalSewa</string>-->
    <string name="seeall">See All</string>
    <string name="shope_by_category">Shope By Category</string>
    <string name="bestseller">BestSeller</string>
    <string name="km_away">Km Away</string>
    <string name="title_activity_search">SearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="all_shops">All Shops</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_abc">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="offer">Offer</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="search_your_product">Search your Product</string>
    <string name="all_category">All Category</string>
    <string name="mobile">Mobile</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="localsewa">LocalSewa</string>
    <string name="please_enter_the_otp_to_login_in_your_account">Please Enter the OTP to Login in Your Account</string>
    <string name="back">Back</string>
    <string name="otp">OTP</string>
    <string name="verify">VERIFY</string>
    <string name="please_enter_the_otp_to_verify_your_account">Please Enter the OTP to Verify Your Account</string>

    <string name="whatsapp_support">Whatsapp support</string>
    <string name="account">Account</string>
    <string name="terms_of_use_privacy_policy">Terms of Use privacy Policy</string>
    <!--<string name="otp">OTP</string>-->

</resources>