<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signin"
            type="com.example.localsewa.viewmodels.SignInViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.SignIn">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/signintoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:ignore="MissingConstraints">


            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_baseline_close_24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signin"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />


        </androidx.appcompat.widget.Toolbar>


        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/searchviewoutline"
            android:hint="@string/mobile"
            android:inputType="number"
            android:text="@={signin.mnumber}"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/cursur"
            app:layout_constraintTop_toBottomOf="@id/signintoolbar" />


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/login"
            android:onClick="@{() ->signin.onclick}"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/mobile" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/login">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/don_t_have_an_account"
                android:textColor="@android:color/darker_gray" />


            <TextView
                android:id="@+id/tosignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/sign_up_now"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>