<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="localsewafragment"
            type="com.example.localsewa.MainActivity" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/tool"
            layout="@layout/toolbar" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tool">


            <include
                android:id="@+id/loadinglayout"
                layout="@layout/loading_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <include
                android:id="@+id/nointernet"
                layout="@layout/no_internet_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">


                <RelativeLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorAccent"
                        android:elevation="20dp"
                        android:padding="2dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <androidx.viewpager.widget.ViewPager
                                android:id="@+id/viewpagerid"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />


                            <LinearLayout
                                android:id="@+id/dotslayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginBottom="10dp"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <RelativeLayout
                        android:id="@+id/textrelativelayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cardview"
                        android:layout_margin="9dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/shope_by_category"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/seeall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif"
                            android:text="@string/seeall"
                            android:textColor="#0040ff"
                            android:textSize="15sp"
                            android:textStyle="normal" />


                    </RelativeLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categoryrecyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textrelativelayout"
                        android:layout_margin="9dp"
                        android:orientation="horizontal" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/banner"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_below="@+id/categoryrecyclerview"
                        android:layout_marginLeft="9dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="9dp"
                        android:src="@drawable/ban" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/banner"
                        android:layout_marginTop="25dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:elevation="5dp"
                        app:cardCornerRadius="25dp"
                        app:cardPreventCornerOverlap="true">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/lower" />

                        <RelativeLayout
                            android:id="@+id/layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="18dp">

                            <TextView
                                android:id="@+id/bestseller"
                                style="@style/TextAppearance.AppCompat.Body1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:padding="5sp"
                                android:text="@string/bestseller"
                                android:textColor="@color/green"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/allbestsellers"
                                style="@style/TextAppearance.AppCompat.Body2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:fontFamily="sans-serif"
                                android:padding="5dp"
                                android:text="@string/seeall"
                                android:textColor="@color/green"
                                android:textSize="15sp"></TextView>


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/allbestsellers"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/loweroutline">

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/bestsellerrecyclerview"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:padding="0dp" />


                            </RelativeLayout>


                        </RelativeLayout>


                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>